force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <label>Histórico de Caso</label>
    <nameField>
        <displayFormat>HC-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de Casos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>