force-app/main/default/objects/Case_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case_Request__c</referenceTo>
    <relationshipLabel>Históricos de Casos</relationshipLabel>
    <relationshipName>Case_History</relationshipName>
    <type>Lookup</type>
</CustomField>