force-app/main/default/objects/Case_History__c/fields/SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Atendido</label>
    <type>Checkbox</type>
</CustomField>